
=======================================================
		WanT code:  Log of Changes 
=======================================================


17 Apr 2013     clibs and wlibs renamed to clib and baselib. (AF)

13 Mar 2013     Tag WanT-2_5_0_alpha2  added to repository. (AF)

12 Mar 2013     Bug fixed in atmproj module (spin polarized case). test16 further updated. (AF)

11 Mar 2013     atmproj module updated to work with bands.x and dos.x . (AF)

02 Mar 2013     atmproj module updated, input variable eshift added. unfold.f90 updated.
		test16 and test18 further developed. (AF)

31 Jan 2013     bug fixed in qexml.f90 (Hubbard_l was allocated with a bad dimension).
		Courtesy of Conor Hogan. (AF)

04 Dec 2012     unfolf.f90 pp is able to compute translations matrix elements.
		Unfolding seems to work (testing not completed). Test18 added. (AF)

27 Nov 2012     unfold.f90 postproc added after discussing with Giovanni Borghi. (AF)

30 Oct 2012     phiGEMM_v1.9.9 added to trunk. (AF)

23 Oct 2012     more OMP support in disentanglement. (AF)

20 Oct 2012     Some basic OMP support introduced in projections, overlaps, 
		spherical harmonics, and overlaps related maps. (AF)

19 Oct 2012     Tree structure changed, src/ dir added. ctools, libs renamed to
		clibs and wlibs. Makedeps and other scripts changed accordingly. 
		Version changed to 2.5.0_alpha2 . (AF)

18 Oct 2012     vdW-WF_v1.0 added to plugin repository (Courtesy of P Silvestrelli). (AF)

17 Oct 2012     Gfortran does not allow (according to F90/95 std) to open the same
		file on different units. A workaround has been tried. (AF)

21 Sep 2012     management of correlation in transport improved, bugs fixed in the
		current examples. (AF)

20 Sep 2012     Bug in the calculation of transport with parallel kpts found and fixed.
		Fmt version number of crystal_API changed to 1.0.0. CRIO fmt changed and completed.
		Related changes introduced in the CRYSTAL-dev source by G. Mallia. (AF)
